Ensured formatted tags in description application were not get cleaned. Description automatically scrolls if content overflows.

--- a/ElastosBountyProgram/front-end/src/module/search/style.scss
+++ b/ElastosBountyProgram/front-end/src/module/search/style.scss
@@ -22,6 +22,15 @@
 
     .ant-list-item {
       margin: $gap_0 0;
+      .ant-list-item-main {
+        .ant-list-item-content {
+          > .description-content {
+            ul, ol {
+              margin-left: 16px;
+            }
+          }
+        }
+      }
     }
   }
 
